WHITE-PAPER/reviewers/packages/v1/policy/PACKAGE_MANIFEST.md
# Review Package: POLICY

**Generated:** 2025-12-16 00:21:52
**Target Venue:** Brookings / Center for AI Safety / EU AI Office
**Total Size:** 27.8 KB
**Total Files:** 3

---

## Description

Policy briefing package (Think tanks)

---

## Reading Order

Start with these files in order:

1. `submissions/policy/README.md`
2. `submissions/policy/LLM_Briefing.md`
3. `guides/summary_statistics.md`

---

## Contents

| Category | Files | Size |
|----------|-------|------|
| submissions/ | 2 files | 18.4 KB |
| guides/ | 1 files | 9.4 KB |

**Total:** 3 files, 27.8 KB

---

## File Listing

### submissions/

- `submissions\policy\LLM_Briefing.md` (14.6 KB)
- `submissions\policy\README.md` (3.8 KB)

### guides/

- `guides\summary_statistics.md` (9.4 KB)

---

## What's NOT Included

- PDF files including 14MB arxiv PDF (use `--include-pdf` to add)
- Other publication path content
- Large binary files

---

## Review Instructions

Please review this package for:

1. **Accuracy of claims** - Are statements supported by evidence?
2. **Clarity of presentation** - Is the writing clear and accessible?
3. **Completeness of evidence** - Are key findings documented?
4. **Suggested improvements** - What would strengthen the paper?

Return feedback to: `WHITE-PAPER/reviewers/from_reviewers/{reviewer}/`

---

*Package extracted from WHITE-PAPER/ for Brookings / Center for AI Safety / EU AI Office submission review.*